apps/staging/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
    namespace: traefik-gateway
    kind: Gateway
  - name: traefik-gateway
    sectionName: https
    namespace: traefik-gateway
    kind: Gateway
  hostnames:
  - homepage.robertharte.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage
      port: 3000
