apps/staging/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.robertharte.home
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  number: 3000
            path: "/"
            pathType: Prefix
